FIX: Poll: option text wrapping bevahiour styling improvement

--- a/plugins/poll/assets/stylesheets/common/poll.scss
+++ b/plugins/poll/assets/stylesheets/common/poll.scss
@@ -25,6 +25,9 @@ div.poll-outer {
       button {
         background-color: var(--secondary);
         border: none;
+        text-align: left;
+        padding-left: 23px;
+        text-indent: -23px;
       }
     }
 
